overflow-fixed

--- a/src/output.css
+++ b/src/output.css
@@ -2133,6 +2133,15 @@
   .gap-9 {
     gap: calc(var(--spacing) * 9);
   }
+  .overflow-auto {
+    overflow: auto;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .overflow-y-clip {
+    overflow-y: clip;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
